manifests/home-assistant/middleware-real-ip.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: real-ip
  namespace: home-assistant
spec:
  ipWhiteList:
    sourceRange:
      # IPv4-only: Inbound ist v4-only (kein Public-v6, Traefik SingleStack v4).
      - 192.168.0.0/16
      - 10.42.0.0/16
